# CppIndia-SessionDocuments

./: README.md
01-08-2020/: Demystifying C++.pptx
07-11-2020/: SMART POINTERS - Part2.pptx
15-08-2020/: MoveCons.cpp  Reference.cpp  lvalue_rvalue.cpp  lvalue_rvalueRef.cpp
17-07-2020/code/: 10_NoCaptureAndLambdaVariable .cpp  1_UnderstandingFunctionObject.cpp  2_FunctionObjectWithSTLAlgorithm.cpp  3_IntrotoLambdas.cpp  4_CaptureByValue.cpp  5_CaptureByReference.cpp  6_DanglingReference.cpp  7_MutlipleCaptures.cpp  8_CaptureThisPointer.cpp  9_DefaultCaptures.cpp
19-12-2020/: Dependency Management for C++ Applications using Cmake + Conan - Part 1.pptx
19-12-2020/examples/calculator/: CMakeLists.txt  main.cpp
19-12-2020/examples/calculator/include/: calculator.h
19-12-2020/examples/calculator/src/: calculator.cpp
19-12-2020/examples/calculator_with_install_export/: CMakeLists.txt
19-12-2020/examples/calculator_with_install_export/cmake/: CalculatorConfig.cmake.in
19-12-2020/examples/calculator_with_install_export/test/: CMakeLists.txt  Test.cpp
19-12-2020/examples/demo/: CMakeLists.txt  Demo.cpp
2021-01-16/: Dependency Management for C++ Applications using Cmake + Conan - Part 2.pptx
2021/03-07/: AMA with Bryce.pptx
2021/05-08/: HPX_For_Dummies.pptx
2021/05-22/: Examples_For_Analysis.txt
2021/12-04/: Secure_C++_Principles.odp
2021/27-02-2021/: async_programming.html
2022/04-23/: N-Lighting Talks - What do I think while designing an APIFunction.pptx
2022/10-15/: C++ A Compilers perspective.pptx
2022/11-12/: CPP_India-Insight_of_Lambda-Final_version-Ratnesh_Tiwari.pptx
24-10-2020/: SMART POINTERS - PART 1(unique_ptr).pptx
29-08-2020/: C++ Regex.pptx  temp.txt
CppIndiaCon2021/: ContractProgrammingWhat,WhyandHow.txt  Saurabh.txt
